src/objects/traisummary__c.object
<CustomObject>
    <fields>
        <fullName>comment__c</fullName>
        <label>讲师评语</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>培训总结</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>test_score__c</fullName>
        <label>考试成绩</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>train__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训名称</label>
        <referenceTo>trainmanagement__c</referenceTo>
        <relationshipLabel>培训总结</relationshipLabel>
        <relationshipName>IJS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训讲师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>username</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>培训总结</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>T-{YYYY}{00000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>培训总结</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>